--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.3"
   }
 }
